HBASE-27979 some syntax errors detected by IDEA in pom.xml

--- a/hbase-annotations/pom.xml
+++ b/hbase-annotations/pom.xml
@@ -24,7 +24,7 @@
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase</artifactId>
     <version>${revision}</version>
-    <relativePath>..</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>hbase-annotations</artifactId>
