HBASE-27992 Bump exec-maven-plugin to 3.1.0 (#5334)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
(cherry picked from commit 0bbc8d15c1a9a489b42d85b126b31483cf536c94)

--- a/hbase-shaded/hbase-shaded-check-invariants/pom.xml
+++ b/hbase-shaded/hbase-shaded-check-invariants/pom.xml
@@ -163,7 +163,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
+        <version>${exec.maven.version}</version>
         <executions>
           <!-- It's easier to have two copies of our validation
                script than to copy it via remote-resources-plugin, but
